<resources>
    <string name="app_name">RullFood</string>
    <string name="title_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_jumlah">0</string>
    <string name="text_harga">Rp Harga Menu</string>
    <string name="text_nama">Nama Menu</string>
    <string name="text_lokasi">Lokasi</string>
    <string name="text_nama_lokasi">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="total_quantity">x%s</string>
    <string name="text_Done">Done!  Thank You :D</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="text_btn_checkout">Checkout</string>
    <string name="text_label_total">Total Price</string>
    <string name="text_total_price">IDR. 80.000.000</string>
    <string name="text_cart">Cart Shopping</string>
    <string name="textt_page_confirm">Page Confirmation</string>
    <string name="image_content_desc">gambar</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_strip">-</string>
    <string name="text_name_of_menu">Menu Name</string>
    <string name="text_price">Rp Price</string>
    <string name="text_desc">Nama saya adalah muhamamd bahrul ilmi, saya kuliah di universitas islam majapahit mojokerto, saya mengambil jurusan teknik infromatika prodi teknik semester 5</string>
    <string name="text_profile">Profile</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_telp">Telephone</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_notes">Pake saos</string>
    <string name="text_disc">Disc 30%</string>
    <string name="text_banner_desc">Pesan makanan lewat aplikasi dan segera dapatkan diskonmu !</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pickup">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_ewallet">E-Wallet</string>
    <string name="text_hello_user">Hallo Bahrul</string>
    <string name="text_greetings">Mau makan apa hari ini?</string>
    <string name="text_list_of_menu">List of menu</string>
    <string name="hello">Hello %1$s</string>
    <string name="text_btn_save">Save</string>
    <string name="text_empty">Empty</string>
    <string name="text_co_error">Checkout Error</string>
    <string name="text_co_success">Checkout Success</string>
    <string name="text_error">Error</string>
    <string name="text_update_success">Update Profile Success</string>
    <string name="text_success_add_to_cart">Add to cart success !</string>
    <string name="text_login_failed">Login Failed : %1$s</string>
</resources>