<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="14dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/iv_pict_menu"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_text_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_nama"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_pict_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_harga_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_harga"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_pict_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_text_menu" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/image_content_desc"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@id/et_notes_item"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_content_desc"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_minus" />

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_jumlah" />

            <ImageView
                android:id="@+id/iv_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_content_desc"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_plus" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_notes_item"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_rounded_border_transparent"
            android:hint="@string/text_hint_notes"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="3"
            android:padding="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_pict_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_menu"
            tools:text="aikowfbawoifhaowifb awbn ouiqawhofin awf oiawf awoif" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>